# app/Http/Controllers/API/CarroAPIController.php
@@ -2,7 +2,7 @@
 
 namespace App\Http\Controllers\API;
 
-use App\Models\Carro;
+use App\Http\Requests\API\PesquisarCarroAPIRequest;
 use App\Repositories\CarroRepository;
 use Illuminate\Http\Request;
 use App\Http\Controllers\AppBaseController;
@@ -72,6 +72,55 @@ class CarroAPIController extends AppBaseController
         } else {
             $carros = \Cache::get($this->cacheDeCarros);
         }
+
+        return $this->sendResponse($carros->toArray(), 'Carros retrieved successfully');
+    }
+
+    /**
+     * @param PesquisarCarroAPIRequest $request
+     * @return Response
+     *
+     * @SWG\Post(
+     *      path="/carros/pesquisar",
+     *      summary="Pesquisa pelos Modelos de Carros",
+     *      tags={"Carro"},
+     *      description="Store Carro",
+     *      produces={"application/json"},
+     *      @SWG\Parameter(
+     *          name="body",
+     *          in="body",
+     *          description="Carro that should be stored",
+     *          required=false,
+     *          @SWG\Schema(ref="#/definitions/Carro")
+     *      ),
+     *      @SWG\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @SWG\Schema(
+     *              type="object",
+     *              @SWG\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @SWG\Property(
+     *                  property="data",
+     *                  ref="#/definitions/Carro"
+     *              ),
+     *              @SWG\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function pesquisar(PesquisarCarroAPIRequest $request)
+    {
+        if (!\Cache::has($this->cacheDeCarros)) {
+            \Artisan::call('crawler:carros');
+        }
+
+        $carros = $this->carroRepository->pesquisar($request);
 
         return $this->sendResponse($carros->toArray(), 'Carros retrieved successfully');
     }
